--- a/guitar/i.html
+++ b/guitar/i.html
@@ -1,77 +1,86 @@
 <div id="pageTitle">Guitar</div>
 
-<div class="import_Data flex">
-  
-<div id="links" class="img16">
-  <a href="http://guitar.ru/"><img src="http://guitar.ru/favicon.ico"> guitar.ru</a><br>
-  <a href="http://www.gitaristu.ru/"><img src="http://www.gitaristu.ru/favicon.ico"> gitaristu.ru</a><br>
-  <a href="http://www.jamplay.com/"><img src="http://www.jamplay.com/favicon.ico"> JamPlay.com</a><br>
-  <a href="http://www.native-instruments.com/#/en/products/guitar/guitar-rig-kontrol/?page=1132"><img src="http://www.native-instruments.com/favicon.ico"> GUITAR RIG</a><br>
-  <a href="http://www.guitarplayer.ru/forum/index.php?topic=79429.0"><img src="http://www.guitarplayer.ru/favicon.ico"> GuitarPlayer.ru</a><br>
-  <a href="http://www.kombik.com/"><img src="http://www.kombik.com/favicon.ico"> Kombik.com</a><br>
+<div style="width: 95vw" class="flex">
+  <div id="links" class="img16">
+    <a href="http://guitar.ru/"><img src="http://guitar.ru/favicon.ico"> guitar.ru</a><br>
+    <a href="http://www.gitaristu.ru/"><img src="http://www.gitaristu.ru/favicon.ico"> gitaristu.ru</a><br>
+    <a href="http://www.jamplay.com/"><img src="http://www.jamplay.com/favicon.ico"> JamPlay.com</a><br>
+    <a href="http://www.native-instruments.com/#/en/products/guitar/guitar-rig-kontrol/?page=1132"><img src="http://www.native-instruments.com/favicon.ico"> GUITAR RIG</a><br>
+    <a href="http://www.guitarplayer.ru/forum/index.php?topic=79429.0"><img src="http://www.guitarplayer.ru/favicon.ico"> GuitarPlayer.ru</a><br>
+    <a href="http://www.kombik.com/"><img src="http://www.kombik.com/favicon.ico"> Kombik.com</a><br>
+  </div>
+
+  <div>
+    <a href="https://youtu.be/ik64119DsMc">НОТЫ (ТЕОРИЯ МУЗЫКИ "САМОУЧКА")</a><br>
+    <a href="https://youtu.be/nlcsEscAtzI">МУЗЫКАЛЬНЫЕ ИНТЕРВАЛЫ (ТЕОРИЯ МУЗЫКИ "САМОУЧКА")</a><br>
+    <a href="https://youtu.be/pEFhapzVNnA">АККОРДЫ (ТЕОРИЯ МУЗЫКИ "САМОУЧКА")</a><br>
+    <a href="https://youtu.be/mRRKUc2n8kY">ГАММЫ, ПЕНТАТОНИКА, ФРИГИЙСКИЙ, ДОРИЙСКИЙ (ТЕОРИЯ МУЗЫКИ "САМОУЧКА")</a><br>
+    <a href="https://youtu.be/MkYDG4JfyzU">Простой секрет скоростных соло | John Petrucci</a><br>
+    <a href="https://youtu.be/O47Zeq3XmCM">Как играть блюз - Шаффл блюз (Shuffle Blues)</a><br>
+    <a href=../guitar/Death_Voice_of_the_souls.txt target="_blank">Death - Voice of the souls (табулатура) </a><br>
+    <a href="https://youtu.be/qa7guKV7IZs">Kirk Fletcher: Blues Masterclass</a><br>
+  </div>
 </div>
 
-<div>
-  <a href="https://youtu.be/ik64119DsMc">НОТЫ (ТЕОРИЯ МУЗЫКИ "САМОУЧКА")</a><br>
-  <a href="https://youtu.be/nlcsEscAtzI">МУЗЫКАЛЬНЫЕ ИНТЕРВАЛЫ (ТЕОРИЯ МУЗЫКИ "САМОУЧКА")</a><br>
-  <a href="https://youtu.be/pEFhapzVNnA">АККОРДЫ (ТЕОРИЯ МУЗЫКИ "САМОУЧКА")</a><br>
-  <a href="https://youtu.be/mRRKUc2n8kY">ГАММЫ, ПЕНТАТОНИКА, ФРИГИЙСКИЙ, ДОРИЙСКИЙ (ТЕОРИЯ МУЗЫКИ "САМОУЧКА")</a><br>
-  <a href="https://youtu.be/MkYDG4JfyzU">Простой секрет скоростных соло | John Petrucci</a><br>
-  <a href="https://youtu.be/O47Zeq3XmCM">Как играть блюз - Шаффл блюз (Shuffle Blues)</a><br>
-  <a href=../guitar/Death_Voice_of_the_souls.txt target="_blank">Death - Voice of the souls (табулатура) </a><br>
-  <a href="https://youtu.be/qa7guKV7IZs">Kirk Fletcher: Blues Masterclass</a><br>
-</div>
+<div class="import_Data grid" style="grid-template-columns: repeat(auto-fit, minmax(330px, 1fr)); grid-row-gap: 40px">
 
 <div>
   <h2>Fender Telecaster (1949)</h2>
+  <img src="../guitar/telec_500.png" alt="Telecaster"><br>
   <a href="https://youtu.be/9Cjdy8nssAM">В чём кайф Telecaster'ов</a>
 </div>
 
 <div>
   <h2>Gibson Les Paul (1952)</h2>
-  <img src="../guitar/GibsonLP.png" alt="" style="float: left">
+  <img src="../guitar/GibsonLP.png" alt="Les Paul"><br>
   <a href="https://youtu.be/vZHruZTC3hI">В чём кайф Les Paul’ов</a>
 </div>
 
 <div>
+  <h2>Gibson Les Paul (2019)</h2>
+  <img src="../guitar/GibLPRed.png" alt="Les Paul red"><br>
+</div>
+
+<div>
   <h2>Fender Stratocaster (1954)</h2>
-  <img src="" alt="" style="float: left">
+  <img src="../guitar/strat_500.png" alt="Stratocaster"><br>
   <a href="https://youtu.be/wl7ZOyKNtAg">В чём кайф Stratocaster</a>
 </div>
 
 <div>
-  <h2>PRS Guitars</h2>
-  <a href="https://youtu.be/USj5nbIvIds">SE 245 Standard</a>
-</div>
-
-<div>
   <h2>Music-Man Steve Morse</h2>
-  <img src="../guitar/B207.png" alt="Steve Morse's guitar" style="float: left">
-  <a href="http://www.stevemorse.com/gear.html"><img src="http://www.stevemorse.com/DATA/B285."> SteveMorse.com</a><br>
+  <img src="../guitar/B207.png" alt="Steve Morse's guitar"><br>
   <a href="https://www.music-man.com/instruments/guitars/steve-morse"><img src="http://www.music-man.com/favicon.ico"> Music-Man.com</a><br>
 </div>
 
 <div>
-  <h2>G&L</h2>
-  <img src="" alt="" style="float: left">
-  <a href="http://glguitars.com/">glguitars.com</a>
-</div>
-
-<div>
-  <h2>Epiphone Les Paul Tribute (1960)</h2>
-  <img src="../guitar/EpiphoneLSTribPlus.png" alt="LesPaulTribPlus" style="float: left">
+  <h2>Epiphone Les Paul (1960)</h2>
+  <img src="../guitar/EpiphoneLSTribPlus.png" alt="LesPaulTribPlus"><br>
   <a href="http://www.epiphone.com/Products/Les-Paul/Les-Paul-Tribute-Plus-Outfit.aspx">epiphone.com</a><br>
 </div>
 
 <div>
   <h2>Tokai LP (1978)</h2>
-  <img src="../guitar/als48-vf.png" alt="Tokai ALS48F-VF" style="float: left">
+  <img src="../guitar/als48-vf.png" alt="Tokai ALS48F-VF"><br>
   <a href="http://www.codamusic.ru/model.aspx?model=ALS48F-SR">Tokai ALS48F</a>
 </div>
 
 <div>
   <h2>PRS</h2>
-  <img src="../guitar/mccarty_singlecut_594_500.png" alt="McCarty Singlecut 594" style="float: left">
+  <img src="../guitar/mccarty_singlecut_594_500.png" alt="McCarty Singlecut 594"><br>
   <a href="https://www.prsguitars.com/index.php/electrics/model/mccarty_singlecut_594_2020">McCarty Singlecut 594</a>
 </div>
+
+<div>
+  <h2>G&L</h2>
+  <img src="" alt=""><br>
+  <a href="http://glguitars.com/">glguitars.com</a>
+</div>
+
+<div>
+  <h2>PRS Guitars</h2>
+  <img src="../guitar/se245_500.png" alt="se245"><br>
+  <a href="https://youtu.be/USj5nbIvIds">SE 245 Standard</a>
+</div>
+
 </div>
