--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Leonardasf1.github.io</title>
   <link rel="SHORTCUT ICON" href="icons/favicon.ico">
   <link rel="stylesheet" href="CSS/style.css">
+  <link rel="manifest" href="manifest.webmanifest">
   <script src="JS/main.js" type="module"></script>
   <script src="JS/lazysizes.min.js" async=""></script>
 </head>
