--- a/programming/react.html
+++ b/programming/react.html
@@ -2,13 +2,14 @@
 
 <div id="links">
     <a href="https://reactjs.org/"><img src="../icons/react.svg" alt="reactjs.org"></a>
-    <a href="https://github.com/facebook/react"><img src="https://github.githubassets.com/favicon.ico" alt="GitHub"></a>
-    <a href="https://nextjs.org/"><img src="https://nextjs.org/static/favicon/favicon-32x32.png" alt="next.js"></a>
+    <a href="https://nextjs.org/"><img src="https://nextjs.org/static/favicon/favicon-32x32.png" alt="next.js"></a><br>
+    <a href="https://flow.org/"><img src="https://flow.org/static/favicon.png" alt="flow" style="height: 16px"> Flow</a><br>
+    <a href="https://ru.reactjs.org/docs/static-type-checking.html">ru.reactjs.org</a><br>
 </div>
 <div>
     <a href="https://itvdn.com/ru/video/react-js-essential">ReactJS Essential</a>
     <ul>
-        <li>Введение в React . <a href="https://youtu.be/gbTSl88k5pk"></a> <a href="primery/react1.html">result</a></li>
+        <li>Введение в React . <a href="https://youtu.be/gbTSl88k5pk"></a> <!-- <a href="primery/react1.html">result</a> --></li>
         <li>Подробнее о компонентах</li>
         <li>Окружение</li>
         <li>Роутинг и ES2015</li>
