--- a/zdorovie/index.html
+++ b/zdorovie/index.html
@@ -20,22 +20,12 @@
   </div>
 </header>
 
-<main>
+<main class="flex">
 
-<div id="links">
-  <a href="http://www.fit4life.ru/"><img src="http://www.fit4life.ru/favicon.ico"> Fit4Life.ru</a>
-  <a href="http://athlete.ru/"><img src="http://athlete.ru/favicon.ico"> athlete.ru</a>
-  <a href="https://www.youtube.com/user/FightNerds"> FightNerds</a>
-</div>
-
-<nav>
-  <a href="produkty.html">Питание</a>
-</nav>
-
-
-
-<article class="flex">
-<div>
+<div id="links" class="img16">
+  <a href="http://www.fit4life.ru/"><img src="http://www.fit4life.ru/favicon.ico"> Fit4Life.ru</a><br>
+  <a href="http://athlete.ru/"><img src="http://athlete.ru/favicon.ico"> athlete.ru</a><br>
+  <a href="https://www.youtube.com/user/FightNerds"> FightNerds</a><br>
   <a href="https://youtu.be/aYPr8Zwix08">ЗДОРОВЫЙ ОБРАЗ ЖИЗНИ</a><br>
   <a href="https://youtu.be/AmInIe8-zQ8">БОГИ ЭСТЕТИКИ: ФРЭНК ЗЕЙН. Как Менс-Физик Качков Шатал!</a><br>
   <a href="https://youtu.be/QfKtkhfJdxY">ПРЕДВАРИТЕЛЬНАЯ АКТИВАЦИЯ МЫШЦ и другие секреты</a><br>
@@ -47,6 +37,11 @@
   <a href="https://youtu.be/doMEYcInm68">КРОССФИТ</a><br>
   <a href="https://youtu.be/-4HNUNzEVMU">ПОСЛЕ ТРАВМЫ связок и суставов. ЛЕЧЕНИЕ.</a><br>
 </div>
+
+<nav>
+  <a href="produkty.html">Питание</a>
+</nav>
+
 <div>
 К факторам, снижающим уровень «плохого» холестерина, относятся:
 <br> физкультура, спорт и вообще регулярная физическая активность, V
@@ -72,25 +67,6 @@
   oilOlive100g ();
   oilLen100g ();
 </script> -->
- <div>
-<h3>
-Как не убить человека во время уличной драки. 
-Травмы, несовместимые с жизнью.
-</h3>
-</div>
-<div>
-ЗАТЫЛОК — опасное место, излюбленная точка приложения сил наемных убийц. Там — особо уязвимый мозжечок, опасность смерти очень велика. Если надо во время уличной драки остановить противника ударом в голову, то сзади точно бить не стоит. Самый безопасный способ — удар ладонью в лоб немного снизу. Если правильно попасть, голова запрокинется, противник отлетит.
-</div><div>
-ВИСОЧНАЯ КОСТЬ такая тонкая, что легко ломается, и тогда осколки могут попасть в мозг. Человек так устроен, что боковая сторона у него хуже защищена (боксеры-тяжеловесы даже иногда специально принимают удары на лоб). Любые удары в голову сбоку травмоопасны еще и потому, что при них мозг в черепной коробке сотрясается сильнее, чем при прямых, и может произойти кровоизлияние. НОС Очень опасны удары ладонью снизу по восходящей, которые вбивают нос. При мощном ударе можно пробить переносицу, и тогда ее кости войдут вглубь черепной коробки. Последствия зависят от силы удара. Если разница в весе большая и в пользу бьющего, травма будет вплоть до смертельного исхода. Удары по носу сбоку — это смещение, огромные темные мешки под глазами и, возможно, несколько недель в гипсовой маске.
-</div><div>
-ЧЕЛЮСТЬ Удар в челюсть опасен тем, что человек может оказаться в нокауте. Для победы это хорошо, но глубокий (глухой) нокаут — это сотрясение мозга, опасность лицевой травмы и прочие серьезные последствия. Сломанная челюсть — это пара месяцев жизни со специальными медицинскими суппортами и диета из жидкой пищи. Кроме того, если неправильно срастется, проблемы будут всю жизнь. Короче, говоря юридическим языком, «тяжкие телесные повреждения».
-</div><div>
-КАДЫК От удара в кадык человек может задохнуться, у него может повредиться трахея. Если бьют сбоку по шее, то не исключены защемления, переломы, обморок (при попадании в сонную артерию). Вдвойне опасно, если это шея человека, который всю жизнь просидел перед компьютером, — у него ослаблена костная и мышечная структура, организм подвержен возникновению сколиозов, остеохондрозов. Пропустит такой удар — и может остаться инвалидом на всю жизнь.
-</div><div>
-ПОЧКИ Четкий, сконцентрированный удар по почкам приводит к тому, что человек умирает — почка отказывает или отрывается, происходит кровоизлияние. Опасны и удары в нижнюю часть брюшной полости — там селезенка, печень. Если попасть в них коленом или просто ногой, тоже можно убить. Конечно, если удар поставленный.
-</div><div>
-ВНУТРЕННИЕ ПОВЕРХНОСТИ
-Внутренние стороны рук и ног очень чувствительны к ударам (правда, относительно безопасны для обоих участников драки — таким ударом человека не убьешь). Снаружи у нас крепкая броня — мышцы, с внутренних же сторон расположены близко проходящие к коже вены и артерии. Поэтому удары, например, по внешней стороне плеча или бедра сравнительно безболезненны, а по внутренней — довольно ощутимы. Также болезненны удары по расслабленным мышцам. </div>
 <div>
 <h2>Упражнения и обучалки</h2>
   <a href="https://youtu.be/XsQGOHX-1kw">ТОП 6 лучших упражнений для НАТУРАЛЬНОГО БОДИБИЛДИНГА</a><br>
@@ -108,7 +84,7 @@
 </div>
 
 <div>
-  <h4> спина , пресс и бицепс - СР</h4>
+  <h4> спина , пресс и бицепс</h4>
    · <a href="https://youtu.be/RKEWzx_7hBg"></a> Подтягивания к груди
   <br> · <a href="https://youtu.be/8uVW6WXB5ps"></a> Горизонтальный вис спереди
   <br> · <a href="https://youtu.be/Pfc4elsfohw"></a> Флажок . Human flag
@@ -123,7 +99,7 @@
 </div>
 
 <div>
-  <h4> грудь, дельты, трицепс - СБ</h4>
+  <h4> грудь, дельты, трицепс</h4>
   <br> · <a href="https://youtu.be/4yzmijgmDc8"></a> Это жим гантелей лёжа на наклонной скамье, детка!
   <br> · <a href="https://youtu.be/Y5YqrJpSHq8"></a> Это тяга гантелей стоя, детка!
   <br> · <a href="https://youtu.be/LOE0tuV8D2s"></a> 2 ЛУЧШИХ УПРАЖНЕНИЯ ДЛЯ ШИРОКИХ ПЛЕЧ!!! <br> · <a href="https://youtu.be/KagXLrhics4"></a> КАК НАКАЧАТЬ ГРУДНЫЕ МЫШЦЫ
@@ -135,7 +111,7 @@
 </div>
 
 <div>
-<h4> ноги - ВС</h4>
+<h4>ноги</h4>
   <br> · <a href="https://youtu.be/Om8D3BkKPC4"></a> · приседания со штангой
   <br> · <a href="https://youtu.be/39rDFUPME7U"></a> · жим ногами
   <br> 
@@ -162,8 +138,25 @@
   <br> · бег по сильно пересечённой местности, ходьба и бег по песку, "лягушка"
 </div>
 
+ <div>
+<h3>
+Как не убить человека во время уличной драки. 
+Травмы, несовместимые с жизнью.
+</h3><p>
+ЗАТЫЛОК — опасное место, излюбленная точка приложения сил наемных убийц. Там — особо уязвимый мозжечок, опасность смерти очень велика. Если надо во время уличной драки остановить противника ударом в голову, то сзади точно бить не стоит. Самый безопасный способ — удар ладонью в лоб немного снизу. Если правильно попасть, голова запрокинется, противник отлетит.
+</p><p>
+ВИСОЧНАЯ КОСТЬ такая тонкая, что легко ломается, и тогда осколки могут попасть в мозг. Человек так устроен, что боковая сторона у него хуже защищена (боксеры-тяжеловесы даже иногда специально принимают удары на лоб). Любые удары в голову сбоку травмоопасны еще и потому, что при них мозг в черепной коробке сотрясается сильнее, чем при прямых, и может произойти кровоизлияние. НОС Очень опасны удары ладонью снизу по восходящей, которые вбивают нос. При мощном ударе можно пробить переносицу, и тогда ее кости войдут вглубь черепной коробки. Последствия зависят от силы удара. Если разница в весе большая и в пользу бьющего, травма будет вплоть до смертельного исхода. Удары по носу сбоку — это смещение, огромные темные мешки под глазами и, возможно, несколько недель в гипсовой маске.
+</p><p>
+ЧЕЛЮСТЬ Удар в челюсть опасен тем, что человек может оказаться в нокауте. Для победы это хорошо, но глубокий (глухой) нокаут — это сотрясение мозга, опасность лицевой травмы и прочие серьезные последствия. Сломанная челюсть — это пара месяцев жизни со специальными медицинскими суппортами и диета из жидкой пищи. Кроме того, если неправильно срастется, проблемы будут всю жизнь. Короче, говоря юридическим языком, «тяжкие телесные повреждения».
+</p><p>
+КАДЫК От удара в кадык человек может задохнуться, у него может повредиться трахея. Если бьют сбоку по шее, то не исключены защемления, переломы, обморок (при попадании в сонную артерию). Вдвойне опасно, если это шея человека, который всю жизнь просидел перед компьютером, — у него ослаблена костная и мышечная структура, организм подвержен возникновению сколиозов, остеохондрозов. Пропустит такой удар — и может остаться инвалидом на всю жизнь.
+</p><p>
+ПОЧКИ Четкий, сконцентрированный удар по почкам приводит к тому, что человек умирает — почка отказывает или отрывается, происходит кровоизлияние. Опасны и удары в нижнюю часть брюшной полости — там селезенка, печень. Если попасть в них коленом или просто ногой, тоже можно убить. Конечно, если удар поставленный.
+</p><p>
+ВНУТРЕННИЕ ПОВЕРХНОСТИ
+Внутренние стороны рук и ног очень чувствительны к ударам (правда, относительно безопасны для обоих участников драки — таким ударом человека не убьешь). Снаружи у нас крепкая броня — мышцы, с внутренних же сторон расположены близко проходящие к коже вены и артерии. Поэтому удары, например, по внешней стороне плеча или бедра сравнительно безболезненны, а по внутренней — довольно ощутимы. Также болезненны удары по расслабленным мышцам. </p>
+</div>
 
-</article>
 </main>
 
 <footer></footer>
