--- a/guitar/i.html
+++ b/guitar/i.html
@@ -11,6 +11,7 @@
   </div>
 
   <div>
+    <a href="https://youtu.be/Jn0NKrkQeeg">SancheZ - Вся правда о технике игры на электрогитаре</a>
     <a href="https://youtu.be/ik64119DsMc">НОТЫ (ТЕОРИЯ МУЗЫКИ "САМОУЧКА")</a><br>
     <a href="https://youtu.be/nlcsEscAtzI">МУЗЫКАЛЬНЫЕ ИНТЕРВАЛЫ (ТЕОРИЯ МУЗЫКИ "САМОУЧКА")</a><br>
     <a href="https://youtu.be/pEFhapzVNnA">АККОРДЫ (ТЕОРИЯ МУЗЫКИ "САМОУЧКА")</a><br>
@@ -33,12 +34,14 @@
 <div>
   <h2>Gibson Les Paul (1952)</h2>
   <img src="../guitar/GibsonLP.png" alt="Les Paul"><br>
-  <a href="https://youtu.be/vZHruZTC3hI">В чём кайф Les Paul’ов</a>
+  <a href="https://youtu.be/vZHruZTC3hI">В чём кайф Les Paul’ов</a><br>
+  <a href="https://sweetguitars.ru/gibson-les-paul-deluxe/">Gibson Les Paul Deluxe (1973)</a>
 </div>
 
 <div>
   <h2>Gibson Les Paul (2019)</h2>
   <img src="../guitar/GibLPRed.png" alt="Les Paul red"><br>
+  <a href="https://guitar-amp.ru/gibson-les-paul-standard-premium-plus-limited-edition-1-of-275-2004.html">Standard Premium Plus Limited Edition(2004)</a>
 </div>
 
 <div>
