--- a/programming/javascript.html
+++ b/programming/javascript.html
@@ -11,6 +11,8 @@
   <a href="https://skillbox.ru/media/code/javascript_glavnyy_instrument_frontend/"><img src="https://skillbox.ru/favicon.ico" alt="Skillbox"></a>
   <br><br>
   <a href="https://www.youtube.com/playlist?list=PLqKQF2ojwm3l4oPjsB9chrJmlhZ-zOzWT">Сложный JavaScript простым языком. Владилен Минин (2019)</a><br>
+  <a href="https://youtu.be/v6AVfIupNB8">Композиция или Наследование в JavaScript?</a><br>
+  <a href="https://youtu.be/3OQkiILpxjA">MoscowJS MeetUp 2020.01</a><br>
   <a href="https://github.com/azat-io/you-dont-know-js-ru">"Вы не знаете JS"</a><br>
   <a href="https://webref.ru/tech/javascript">WebRef</a><br>
   <a href="https://vk.com/doc7608079_488265969">Секреты JavaScript Ниндзя</a><br>
