--- a/surf/i.html
+++ b/surf/i.html
@@ -2,18 +2,20 @@
 
 <div class="import_Data flex">
 
-		<div>
-<li><a href="https://www.surfmakers-lanka.ru/blog-surf-school"> Блог школы серфинга на Шри-Ланке</a></li>
-<li><a href="http://surfstories.ru/"><img src="http://surfstories.ru/favicon.ico" height="16px"> «Серфсторис-ру»</a></li>
-<li><a href="http://surfedukators.com/"> Очень полезный английский сайт Surfedukators.com</a></li>
-<li><a href="https://www.theinertia.com/"> Сайт с новостями про серфинг Theinertia.com</a></li>
+<div>
+<a href="https://www.surfmakers-lanka.ru/blog-surf-school"> Блог школы серфинга на Шри-Ланке</a><br>
+<a href="http://surfstories.ru/"><img src="http://surfstories.ru/favicon.ico" height="16px"> «Серфсторис-ру»</a><br>
+<a href="http://surfedukators.com/"> Очень полезный английский сайт Surfedukators.com</a><br>
+<a href="https://www.theinertia.com/"> Сайт с новостями про серфинг Theinertia.com</a><br>
+<a href="http://mysovskiy.com/waveriding-na-kayte-obuchenie/">Вейврайдинг</a> <br>
+<a href="http://www.boatsandoutboards.co.uk/"><img src="http://www.boatsandoutboards.co.uk/favicon.ico"> Boats&OutBoards.</a><br>
 <br>
-<li><a href="https://www.youtu.be/dBmHlpliXfk">How to Surf Like a Pro in 25 Minutes</a></li>
-<li><a href="https://www.youtu.be/RsvjCH175hk">6 Advanced Surfing Lessons EVERYONE Should Learn</a></li>
-<li><a href="https://www.youtu.be/c6yOxWf3A6g">HOW TO SURF: 7 BEGINNER MISTAKES AND HOW TO FIX THEM</a></li>
-<li><a href="https://www.youtu.be/ei6ALmEFhyA">HOW TO SURF | 15 TIPS AND EXERCISES TO IMPROVE YOUR SURFING</a></li>
-<li><a href="https://www.youtu.be/esV6ypDDoVA">BIGGEST WAVES EVER SURFED IN HISTORY | LAS OLAS MÁS GRANDES JAMÁS SURFEADAS</a></li>
-		</div>
+<a href="https://www.youtu.be/dBmHlpliXfk">How to Surf Like a Pro in 25 Minutes</a><br>
+<a href="https://www.youtu.be/RsvjCH175hk">6 Advanced Surfing Lessons EVERYONE Should Learn</a><br>
+<a href="https://www.youtu.be/c6yOxWf3A6g">HOW TO SURF: 7 BEGINNER MISTAKES AND HOW TO FIX THEM</a><br>
+<a href="https://www.youtu.be/ei6ALmEFhyA">HOW TO SURF | 15 TIPS AND EXERCISES TO IMPROVE YOUR SURFING</a><br>
+<a href="https://www.youtu.be/esV6ypDDoVA">BIGGEST WAVES EVER SURFED IN HISTORY | LAS OLAS MÁS GRANDES JAMÁS SURFEADAS</a><br>
+</div>
 
 <div class="lazy">
   
