--- a/zdorovie/index.html
+++ b/zdorovie/index.html
@@ -69,6 +69,7 @@
 </script> -->
 <div>
 <h2>Упражнения и обучалки</h2>
+  <a href="https://youtu.be/Y8KX8wUiVgI">Arnold Schwarzenegger (Mr.Olympia 1975)</a><br>
   <a href="https://youtu.be/XsQGOHX-1kw">ТОП 6 лучших упражнений для НАТУРАЛЬНОГО БОДИБИЛДИНГА</a><br>
   <a href="https://youtu.be/EFOQHrd2jn4">Как тренировать СИЛЬНЕЙШИЙ УДАР (молот + покрышка)</a><br>
   <a href="https://youtu.be/52kFRYazyec">Тренировка СКОРОСТИ УДАРА (ПЛИОМЕТРИКА)</a><br>
@@ -85,6 +86,8 @@
 
 <div>
   <h4> спина , пресс и бицепс</h4>
+  <a href="https://youtu.be/YlKspOmniDc">Полная Тренировка Спины За 23 Минуты | Джефф Кавальер</a><br>
+  <a href="https://youtu.be/7AgKyL47XnU">Тренировка мышц спины. Денис Гусев.</a><br>
    · <a href="https://youtu.be/RKEWzx_7hBg"></a> Подтягивания к груди
   <br> · <a href="https://youtu.be/8uVW6WXB5ps"></a> Горизонтальный вис спереди
   <br> · <a href="https://youtu.be/Pfc4elsfohw"></a> Флажок . Human flag
@@ -94,12 +97,15 @@
   <br> · <a href="https://youtu.be/Nsxe-ngeZn4"></a> 8 Способов Подъема Штанги На Бицепс!
   
   <h4> Упражнения при болях в спине</h4>
+  <a href="https://youtu.be/8KiW9KqVMjI">Боль в спине и шее: как избавиться и можно ли заниматься спортом при грыже</a><br>
   <br> · <a href="https://youtu.be/LrURE7cftZw">Упражнения при болях в позвоночнике Дикуль</a>
   <br> · <a href="https://youtu.be/ueP157AfXF4">Суставная гимнастика Норбекова - medical gymnastics of Norbekov.</a>
 </div>
 
 <div>
   <h4> грудь, дельты, трицепс</h4>
+  <a href="https://youtu.be/dT9KX4fJ-S8">Тренировка мышц груди. Денис Гусев.</a><br>
+  <a href="https://youtu.be/MM4ZBCLX6TU">Тренировка дельтовидных мышц. Денис Гусев.</a><br>
   <br> · <a href="https://youtu.be/4yzmijgmDc8"></a> Это жим гантелей лёжа на наклонной скамье, детка!
   <br> · <a href="https://youtu.be/Y5YqrJpSHq8"></a> Это тяга гантелей стоя, детка!
   <br> · <a href="https://youtu.be/LOE0tuV8D2s"></a> 2 ЛУЧШИХ УПРАЖНЕНИЯ ДЛЯ ШИРОКИХ ПЛЕЧ!!! <br> · <a href="https://youtu.be/KagXLrhics4"></a> КАК НАКАЧАТЬ ГРУДНЫЕ МЫШЦЫ
